// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Buttons of different size correctly 1`] = `
<div>
  <button
    class="za-button za-button--primary za-button--xl za-button--radius"
    type="button"
  >
    xl尺寸
  </button>
  <button
    class="za-button za-button--primary za-button--lg za-button--radius"
    type="button"
  >
    lg尺寸
  </button>
  <button
    class="za-button za-button--primary za-button--radius"
    type="button"
  >
    默认尺寸
  </button>
  <button
    class="za-button za-button--primary za-button--sm za-button--radius"
    type="button"
  >
    sm尺寸
  </button>
  <button
    class="za-button za-button--primary za-button--xs za-button--radius"
    type="button"
  >
    xs尺寸
  </button>
</div>
`;

exports[`Button renders Buttons of different theme correctly 1`] = `
<div>
  <button
    class="za-button za-button--default za-button--radius"
    type="button"
  >
    default
  </button>
  <button
    class="za-button za-button--primary za-button--radius"
    type="button"
  >
    info
  </button>
  <button
    class="za-button za-button--success za-button--radius"
    type="button"
  >
    success
  </button>
  <button
    class="za-button za-button--warning za-button--radius"
    type="button"
  >
    warning
  </button>
  <button
    class="za-button za-button--error za-button--radius"
    type="button"
  >
    error
  </button>
</div>
`;

exports[`Button renders Buttons with radius or round props correctly 1`] = `
<div>
  <div>
    <button
      class="za-button za-button--default za-button--radius"
      type="button"
    >
      default
    </button>
    <button
      class="za-button za-button--primary za-button--radius"
      type="button"
    >
      info
    </button>
    <button
      class="za-button za-button--success za-button--radius"
      type="button"
    >
      success
    </button>
    <button
      class="za-button za-button--warning za-button--radius"
      type="button"
    >
      warning
    </button>
    <button
      class="za-button za-button--danger za-button--radius"
      type="button"
    >
      error
    </button>
  </div>
  <div>
    <button
      class="za-button za-button--default za-button--round"
      type="button"
    >
      default
    </button>
    <button
      class="za-button za-button--primary za-button--round"
      type="button"
    >
      info
    </button>
    <button
      class="za-button za-button--success za-button--round"
      type="button"
    >
      success
    </button>
    <button
      class="za-button za-button--warning za-button--round"
      type="button"
    >
      warning
    </button>
    <button
      class="za-button za-button--danger za-button--round"
      type="button"
    >
      error
    </button>
  </div>
</div>
`;

exports[`Button renders anchor Button correctly 1`] = `
<a
  class="za-button za-button--primary za-button--radius"
  href="https://www.baidu.com"
  target="_blank"
>
  百度一下
</a>
`;

exports[`Button renders disaled Button correctly 1`] = `
<div>
  <button
    class="za-button za-button--default za-button--radius za-button--disabled"
    disabled=""
    type="button"
  >
    default
  </button>
</div>
`;

exports[`Button renders loading Button correctly 1`] = `
<div>
  <button
    class="za-button za-button--info za-button--radius za-button--loading"
    type="button"
  >
    <i
      class="za-icon za-icon-loading theme-default rotate360"
    />
      加载中
  </button>
</div>
`;
